--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,20 +8,20 @@ services:
       - .\app:/usr/src/app
       # - /usr/src/app/node_modules
     ports:
-      - 3000:3000
+      - 13000:3000
     # command: bash
     command: sh -c 'npm ci; node server.js'
     tty: true
 
-  ngrok:
-    image: ngrok/ngrok:latest
-    restart: unless-stopped
-    command:
-      - "start"
-      - "--all"
-      - "--config"
-      - "/etc/ngrok.yml"
-    ports:
-      - 4040:4040
-    volumes:
-      - .\ngrok.yml:/etc/ngrok.yml
+  # ngrok:
+  #   image: ngrok/ngrok:latest
+  #   restart: unless-stopped
+  #   command:
+  #     - "start"
+  #     - "--all"
+  #     - "--config"
+  #     - "/etc/ngrok.yml"
+  #   ports:
+  #     - 4040:4040
+  #   volumes:
+  #     - .\ngrok.yml:/etc/ngrok.yml
